# snake_planning

leader_follow/: CMakeLists.txt  package.xml
leader_follow/include/leader_follow/: LeaderFollower.h  LeaderFollowerSpline.h  SamplingBasedTrajectory.h  SnakeCommand.h
leader_follow/launch/: leader_follower_motion.launch
leader_follow/qpOASES/: CMakeLists.txt
leader_follow/script/: control_points_manually_server.py  sample_points_manually_server.py
leader_follow/src/: LeaderFollower.cpp  LeaderFollowerSpline.cpp  SamplingBasedTrajectory.cpp  SnakeCommand.cpp  leader_follow_node.cpp  leader_follow_spline_node.cpp
snake_planning/: CMakeLists.txt  package.xml
